--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,20 +1,15 @@
 <div class="container-fluid home-container">
-  <div class="row">
+  <div class="row mb-3">
     <div class="col text-center">
-      <span class="title">Search d_evs</span>
+      <span class="search-devs">Search d_evs</span>
     </div>
   </div>
-  <div class="row">
+  <div class="row justify-content-around w-50">
     <div class="col text-center">
-      <div class="input-group">
-        <span class="input-group-text">
-          <span class="material-symbols-outlined">
-            search
-          </span>
-        </span>
-        <input type="text" class="form-control" placeholder="Search" [formControl]="searchControl">
-        <button type="button" class="btn btn-primary" (click)="onSubmit()">Search</button>
-      </div>
+      <app-search [searchControl]="searchControl" (onEnterEvent)="onSubmit()"></app-search>
+    </div>
+    <div class="col-3">
+      <button type="button" class="btn btn-primary" (click)="onSubmit()">Search</button>
     </div>
   </div>
 </div>
