--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,30 @@
-/* You can add global styles to this file, and also import other style files */
+.search-devs {
+  font-size: var(--font-size, 16px);
+
+  background: -webkit-linear-gradient(right, #8C19D2, #0069CA);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+// Override default btn configs
+.btn-primary {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #8C19D2;
+  --bs-btn-border-color: #8C19D2;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #8C19D2;
+  --bs-btn-hover-border-color: #8C19D2;
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #8C19D2;
+  --bs-btn-active-border-color: #8C19D2;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #8C19D2;
+  --bs-btn-disabled-border-color: #8C19D2;
+
+  --bs-btn-border-radius: 6px;
+  width: 100%;
+}
+
+
