--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,10 +1,8 @@
 <div class="input-group">
         <span class="input-group-text">
-          <span class="material-symbols-outlined">
-            search
-          </span>
+          <img src="assets/icons/zoom.png" alt="zoom"/>
         </span>
-  <input type="text" class="form-control" [placeholder]="placeholder"
+  <input type="text" class="form-control" [placeholder]="placeholder" [readonly]="readonly" [disabled]="readonly"
          [formControl]="searchControl"
          (keydown.enter)="onEnterEvent.emit()">
   <div class="has-error" *ngIf="searchControl.hasError('notFound')">
