--- a/src/app/views/profile/profile.component.html
+++ b/src/app/views/profile/profile.component.html
@@ -1,18 +1,19 @@
 <div class="container-fluid profile-container">
-  <div class="row">
-    <div class="col">
+  <div class="row align-items-center">
+    <div class="col-3">
       <span class="search-devs">Search d_evs</span>
     </div>
-    <div class="col">
-      <div class="input-group">
-        <span class="input-group-text">
-          <span class="material-symbols-outlined">
-            search
-          </span>
-        </span><!--
-        <input type="text" class="form-control" placeholder="Search" [formControl]="searchControl">
-        <button type="button" class="btn btn-primary" (click)="onSubmit()">Search</button>-->
-      </div>
+    <div class="col-6">
+      <app-search [placeholder]="username" [readonly]="true"></app-search>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-3">
+      <app-profile-card [user]="user" ></app-profile-card>
+
+    </div>
+    <div class="col-6">
 
     </div>
   </div>
