--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,30 +1,34 @@
+$brand-primary: #8C19D2;
+
 .search-devs {
   font-size: var(--font-size, 16px);
 
-  background: -webkit-linear-gradient(right, #8C19D2, #0069CA);
+  background: -webkit-linear-gradient(right, $brand-primary, #0069CA);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
 // Override default btn configs
 .btn-primary {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #8C19D2;
-  --bs-btn-border-color: #8C19D2;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #8C19D2;
-  --bs-btn-hover-border-color: #8C19D2;
-  --bs-btn-focus-shadow-rgb: 49, 132, 253;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #8C19D2;
-  --bs-btn-active-border-color: #8C19D2;
-  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #8C19D2;
-  --bs-btn-disabled-border-color: #8C19D2;
-
+  --bs-btn-bg: #{$brand-primary};
+  --bs-btn-border-color: #{$brand-primary};
+  --bs-btn-hover-bg: #{$brand-primary};
+  --bs-btn-hover-border-color: #{$brand-primary};
+  --bs-btn-active-bg: #{$brand-primary};
+  --bs-btn-active-border-color: #{$brand-primary};
+  --bs-btn-disabled-bg: #{$brand-primary};
+  --bs-btn-disabled-border-color: #{$brand-primary};
   --bs-btn-border-radius: 6px;
+
   width: 100%;
 }
 
+.input-group {
+  border: solid 2px $brand-primary;
+  border-radius: 0.375rem;
+
+  span {
+    opacity: .5;
+  }
+}
 
