--- a/src/app/components/profile-card/profile-card.component.html
+++ b/src/app/components/profile-card/profile-card.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 18rem;" *ngIf="user">
   <div class="card-header">
     <div class="row">
       <div class="col-auto">
