--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -1,3 +1,5 @@
+@import "../../../styles";
+
 .has-error {
   position: absolute;
   top: 110%;
@@ -5,4 +7,11 @@
   text-align: left;
   font-size: 0.8rem;
   color: orangered;
+}
+
+a {
+  text-decoration: none;
+  color: $brand-primary;
+  font-size: 20px;
+  opacity: 1 !important;
 }
